2017-11-02  Jon Lee  <jonlee@apple.com>

        Add license for MotionMark
        https://bugs.webkit.org/show_bug.cgi?id=179222

        Reviewed by Ryosuke Niwa.

        * MotionMark/about.html:
        * MotionMark/developer.html:
        * MotionMark/index.html:
        * MotionMark/resources/debug-runner/graph.js:
        * MotionMark/resources/debug-runner/motionmark.css:
        * MotionMark/resources/debug-runner/motionmark.js:
        * MotionMark/resources/debug-runner/tests.js:
        * MotionMark/resources/extensions.js:
        * MotionMark/resources/statistics.js:
        * MotionMark/resources/strings.js:
        * MotionMark/tests/3d/resources/webgl.js:
        * MotionMark/tests/3d/webgl.html:
        * MotionMark/tests/bouncing-particles/bouncing-canvas-images.html:
        * MotionMark/tests/bouncing-particles/bouncing-canvas-shapes.html:
        * MotionMark/tests/bouncing-particles/bouncing-css-images.html:
        * MotionMark/tests/bouncing-particles/bouncing-css-shapes.html:
        * MotionMark/tests/bouncing-particles/bouncing-svg-images.html:
        * MotionMark/tests/bouncing-particles/bouncing-svg-shapes.html:
        * MotionMark/tests/bouncing-particles/bouncing-tagged-images.html:
        * MotionMark/tests/bouncing-particles/resources/bouncing-canvas-images.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-canvas-particles.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-canvas-shapes.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-css-images.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-css-shapes.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-particles.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-svg-images.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-svg-particles.js:
        * MotionMark/tests/bouncing-particles/resources/bouncing-svg-shapes.js: